DML warnings on DCN301 and amd-staging-drm-next
Brief summary of the problem:
The warnings described below appear when using current amd-staging-drm-next (agd5f/linux@924179fd) on DCN301.
Bisected: first bad commit: [aa5804fe358273917f7879ee8936360fcaa5d4d7] drm/amd/display: Filter Invalid 420 Modes for HDMI TMDS
Those warnings disappear if the bad commit agd5f/linux@aa5804fe is reverted.
This commit is part of [pull] amdgpu, amdkfd, radeon, drm drm-next-6.2 - 04/11
[ 6.923402] ------------[ cut here ]------------
[ 6.923404] WARNING: CPU: 7 PID: 695 at drivers/gpu/drm/amd/amdgpu/../display/dc/dml/calcs/dcn_calcs.c:296 swizzle_mode_to_macro_tile_size+0x35/0x40 [amdgpu]
[ 6.923875] Modules linked in: ccm algif_aead cbc des_generic libdes ecb cmac md4 algif_skcipher algif_hash af_alg bnep amdgpu(+) rtw88_8822ce rtw88_8822c rtw88_pci rtw88_core intel_rapl_msr intel_rapl_common kvm_amd drm_ttm_helper mac80211 snd_soc_acp5x_mach snd_acp5x_i2s snd_acp5x_pcm_dma ttm kvm agpgart libarc4 gpu_sched i2c_algo_bit drm_buddy snd_hda_codec_hdmi irqbypass drm_display_helper rapl joydev snd_hda_intel mousedev cfg80211 snd_intel_dspcfg drm_kms_helper snd_hda_codec snd_pci_acp5x snd_soc_nau8821 pcspkr syscopyarea snd_rn_pci_acp3x snd_hwdep snd_acp_config sysfillrect sysimgblt snd_soc_acpi fb_sys_fops snd_soc_core snd_pci_acp3x snd_hda_core cec i2c_piix4 snd_compress snd_pcm ina2xx_adc kfifo_buf video spi_amd snd_timer ina2xx opt3001 snd industrialio acpi_cpufreq mac_hid soundcore drm fuse ip_tables x_tables overlay ext4 mbcache jbd2 btusb btrtl btbcm btintel btmtk bluetooth rfkill ecdh_generic ecc crc16 usbhid vfat fat serio_raw atkbd libps2 sdhci_pci vivaldi_fmap cqhci
[ 6.923958] i8042 ccp sdhci crct10dif_pclmul crc32_pclmul xhci_pci hid_multitouch ghash_clmulni_intel aesni_intel crypto_simd cryptd wdat_wdt mmc_core sp5100_tco rng_core xhci_pci_renesas serio 8250_dw i2c_hid_acpi i2c_hid btrfs blake2b_generic libcrc32c crc32c_generic crc32c_intel xor raid6_pq dm_mirror dm_region_hash dm_log dm_mod pkcs8_key_parser crypto_user
[ 6.923986] CPU: 7 PID: 695 Comm: systemd-udevd Not tainted 5.19.0-amd-staging-drm-next+ #87
[ 6.923989] Hardware name: Valve Jupiter/Jupiter, BIOS F7A0105 03/21/2022
[ 6.923992] RIP: 0010:swizzle_mode_to_macro_tile_size+0x35/0x40 [amdgpu]
[ 6.924428] Code: 01 00 00 00 89 f9 ba 01 00 00 00 48 d3 e0 a9 00 0e 06 0e 75 19 31 d2 a9 e1 00 e0 00 75 10 ba 02 00 00 00 a9 00 e0 00 e0 75 04 <0f> 0b 31 d2 89 d0 e9 a0 26 6f e2 0f 1f 44 00 00 4c 8d 54 24 08 48
[ 6.924431] RSP: 0018:ffff9936c0eff5f8 EFLAGS: 00010212
[ 6.924433] RAX: 0000000000000001 RBX: ffff8d085a81a800 RCX: 0000000000000001
[ 6.924435] RDX: 0000000000000000 RSI: ffff8d0846e75400 RDI: 0000000000000020
[ 6.924437] RBP: ffff9936c0eff668 R08: 0000000000000000 R09: 0000000000000000
[ 6.924439] R10: 0000000000000000 R11: 0000000000000000 R12: ffff8d08558c7000
[ 6.924440] R13: 0000000000000000 R14: ffff8d0855dc01e8 R15: 0000000000000001
[ 6.924442] FS: 00007f8941d8ca40(0000) GS:ffff8d0b6ffc0000(0000) knlGS:0000000000000000
[ 6.924444] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 6.924446] CR2: 00007f89f53c3000 CR3: 000000011048e000 CR4: 0000000000350ee0
[ 6.924448] Call Trace:
[ 6.924453] <TASK>
[ 6.924455] dcn20_populate_dml_pipes_from_context+0x7fc/0xe10 [amdgpu]
[ 6.924892] dcn30_populate_dml_pipes_from_context+0x3a/0xc0 [amdgpu]
[ 6.925325] dcn30_internal_validate_bw+0xe4/0x9c0 [amdgpu]
[ 6.925747] ? dm_read_reg_func+0x37/0xb0 [amdgpu]
[ 6.926167] ? generic_reg_get4+0x30/0x80 [amdgpu]
[ 6.926512] dcn30_validate_bandwidth+0xac/0x2c0 [amdgpu]
[ 6.926856] dc_validate_global_state+0x30c/0x3d0 [amdgpu]
[ 6.927206] create_validate_stream_for_sink+0x389/0x3c0 [amdgpu]
[ 6.927553] amdgpu_dm_connector_mode_valid+0x4e/0x190 [amdgpu]
[ 6.927896] ? drm_connector_list_update+0x17d/0x1e0 [drm]
[ 6.927930] drm_connector_mode_valid+0x38/0x60 [drm_kms_helper]
[ 6.927947] __drm_helper_update_and_validate+0xfe/0x3b0 [drm_kms_helper]
[ 6.927960] ? amdgpu_dm_connector_get_modes+0x24d/0x4a0 [amdgpu]
[ 6.928348] drm_helper_probe_single_connector_modes+0x277/0x580 [drm_kms_helper]
[ 6.928366] drm_client_modeset_probe+0x229/0x1640 [drm]
[ 6.928408] ? xas_store+0x54/0x600
[ 6.928415] ? amdgpu_vm_bo_add+0x2a/0xa0 [amdgpu]
[ 6.928761] ? kmem_cache_alloc_trace+0x14b/0x2c0
[ 6.928767] __drm_fb_helper_initial_config_and_unlock+0x44/0x510 [drm_kms_helper]
[ 6.928785] ? amdgpu_driver_open_kms+0xc6/0x210 [amdgpu]
[ 6.929120] drm_fbdev_client_hotplug+0x16c/0x220 [drm_kms_helper]
[ 6.929137] drm_fbdev_generic_setup+0xa9/0x180 [drm_kms_helper]
[ 6.929154] amdgpu_pci_probe+0x34e/0x360 [amdgpu]
[ 6.929484] local_pci_probe+0x41/0x80
[ 6.929488] pci_device_probe+0xbd/0x220
[ 6.929492] ? sysfs_do_create_link_sd+0x6e/0xe0
[ 6.929498] really_probe+0x1c2/0x390
[ 6.929503] __driver_probe_device+0xff/0x170
[ 6.929507] driver_probe_device+0x1f/0x90
[ 6.929510] __driver_attach+0xbe/0x1b0
[ 6.929513] ? __device_attach_driver+0xe0/0xe0
[ 6.929516] bus_for_each_dev+0x76/0xc0
[ 6.929519] bus_add_driver+0x160/0x210
[ 6.929523] driver_register+0x89/0xe0
[ 6.929526] ? 0xffffffffc105f000
[ 6.929529] do_one_initcall+0x44/0x200
[ 6.929534] ? do_init_module+0x22/0x1e0
[ 6.929539] ? kmem_cache_alloc_trace+0x14b/0x2c0
[ 6.929543] do_init_module+0x4a/0x1e0
[ 6.929547] __do_sys_init_module+0x138/0x1b0
[ 6.929553] do_syscall_64+0x3a/0x90
[ 6.929559] entry_SYSCALL_64_after_hwframe+0x63/0xcd
[ 6.929563] RIP: 0033:0x7f894278d32e
[ 6.929566] Code: 48 8b 0d 45 0b 0c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 49 89 ca b8 af 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 12 0b 0c 00 f7 d8 64 89 01 48
[ 6.929568] RSP: 002b:00007ffedbc23b88 EFLAGS: 00000246 ORIG_RAX: 00000000000000af
[ 6.929572] RAX: ffffffffffffffda RBX: 000055a1a8ea5e30 RCX: 00007f894278d32e
[ 6.929573] RDX: 00007f89428e2a9d RSI: 000000000133c2e1 RDI: 00007f893fdb9010
[ 6.929575] RBP: 00007f893fdb9010 R08: 000055a1a8ecd000 R09: 000000000133c2f0
[ 6.929576] R10: 000000055a1a8ecd R11: 0000000000000246 R12: 00007f89428e2a9d
[ 6.929578] R13: 0000000000000001 R14: 000055a1a8ea5f20 R15: 000055a1a8ea5e30
[ 6.929581] </TASK>
[ 6.929582] ---[ end trace 0000000000000000 ]---
[ 6.929597] ------------[ cut here ]------------
[ 6.929598] WARNING: CPU: 7 PID: 695 at drivers/gpu/drm/amd/amdgpu/../display/dc/dml/dcn20/dcn20_fpu.c:1154 dcn20_populate_dml_pipes_from_context+0xdf0/0xe10 [amdgpu]
[ 6.930028] Modules linked in: ccm algif_aead cbc des_generic libdes ecb cmac md4 algif_skcipher algif_hash af_alg bnep amdgpu(+) rtw88_8822ce rtw88_8822c rtw88_pci rtw88_core intel_rapl_msr intel_rapl_common kvm_amd drm_ttm_helper mac80211 snd_soc_acp5x_mach snd_acp5x_i2s snd_acp5x_pcm_dma ttm kvm agpgart libarc4 gpu_sched i2c_algo_bit drm_buddy snd_hda_codec_hdmi irqbypass drm_display_helper rapl joydev snd_hda_intel mousedev cfg80211 snd_intel_dspcfg drm_kms_helper snd_hda_codec snd_pci_acp5x snd_soc_nau8821 pcspkr syscopyarea snd_rn_pci_acp3x snd_hwdep snd_acp_config sysfillrect sysimgblt snd_soc_acpi fb_sys_fops snd_soc_core snd_pci_acp3x snd_hda_core cec i2c_piix4 snd_compress snd_pcm ina2xx_adc kfifo_buf video spi_amd snd_timer ina2xx opt3001 snd industrialio acpi_cpufreq mac_hid soundcore drm fuse ip_tables x_tables overlay ext4 mbcache jbd2 btusb btrtl btbcm btintel btmtk bluetooth rfkill ecdh_generic ecc crc16 usbhid vfat fat serio_raw atkbd libps2 sdhci_pci vivaldi_fmap cqhci
[ 6.930088] i8042 ccp sdhci crct10dif_pclmul crc32_pclmul xhci_pci hid_multitouch ghash_clmulni_intel aesni_intel crypto_simd cryptd wdat_wdt mmc_core sp5100_tco rng_core xhci_pci_renesas serio 8250_dw i2c_hid_acpi i2c_hid btrfs blake2b_generic libcrc32c crc32c_generic crc32c_intel xor raid6_pq dm_mirror dm_region_hash dm_log dm_mod pkcs8_key_parser crypto_user
[ 6.930110] CPU: 7 PID: 695 Comm: systemd-udevd Tainted: G W 5.19.0-amd-staging-drm-next+ #87
[ 6.930112] Hardware name: Valve Jupiter/Jupiter, BIOS F7A0105 03/21/2022
[ 6.930113] RIP: 0010:dcn20_populate_dml_pipes_from_context+0xdf0/0xe10 [amdgpu]
[ 6.930470] Code: 41 c7 44 24 44 00 00 00 00 e9 77 fa ff ff 41 c7 44 24 44 1e 00 00 00 e9 69 fa ff ff 41 c7 44 24 44 06 00 00 00 e9 5b fa ff ff <0f> 0b e9 54 fa ff ff 41 c7 44 24 44 0e 00 00 00 e9 46 fa ff ff e8
[ 6.930472] RSP: 0018:ffff9936c0eff600 EFLAGS: 00010216
[ 6.930474] RAX: 0000000000000020 RBX: ffff8d085a81a800 RCX: 0000000000000001
[ 6.930475] RDX: 0000000000000000 RSI: ffff8d0846e75400 RDI: 0000000000000020
[ 6.930476] RBP: ffff9936c0eff668 R08: 0000000000000000 R09: 0000000000000000
[ 6.930478] R10: 0000000000000000 R11: 0000000000000000 R12: ffff8d08558c7000
[ 6.930479] R13: 0000000000000000 R14: ffff8d0855dc01e8 R15: 0000000000000001
[ 6.930480] FS: 00007f8941d8ca40(0000) GS:ffff8d0b6ffc0000(0000) knlGS:0000000000000000
[ 6.930482] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[ 6.930483] CR2: 00007f89f53c3000 CR3: 000000011048e000 CR4: 0000000000350ee0
[ 6.930485] Call Trace:
[ 6.930486] <TASK>
[ 6.930488] dcn30_populate_dml_pipes_from_context+0x3a/0xc0 [amdgpu]
[ 6.930835] dcn30_internal_validate_bw+0xe4/0x9c0 [amdgpu]
[ 6.931193] ? dm_read_reg_func+0x37/0xb0 [amdgpu]
[ 6.931615] ? generic_reg_get4+0x30/0x80 [amdgpu]
[ 6.932035] dcn30_validate_bandwidth+0xac/0x2c0 [amdgpu]
[ 6.932455] dc_validate_global_state+0x30c/0x3d0 [amdgpu]
[ 6.932873] create_validate_stream_for_sink+0x389/0x3c0 [amdgpu]
[ 6.933265] amdgpu_dm_connector_mode_valid+0x4e/0x190 [amdgpu]
[ 6.933606] ? drm_connector_list_update+0x17d/0x1e0 [drm]
[ 6.933642] drm_connector_mode_valid+0x38/0x60 [drm_kms_helper]
[ 6.933656] __drm_helper_update_and_validate+0xfe/0x3b0 [drm_kms_helper]
[ 6.933670] ? amdgpu_dm_connector_get_modes+0x24d/0x4a0 [amdgpu]
[ 6.934012] drm_helper_probe_single_connector_modes+0x277/0x580 [drm_kms_helper]
[ 6.934027] drm_client_modeset_probe+0x229/0x1640 [drm]
[ 6.934060] ? xas_store+0x54/0x600
[ 6.934064] ? amdgpu_vm_bo_add+0x2a/0xa0 [amdgpu]
[ 6.934346] ? kmem_cache_alloc_trace+0x14b/0x2c0
[ 6.934350] __drm_fb_helper_initial_config_and_unlock+0x44/0x510 [drm_kms_helper]
[ 6.934365] ? amdgpu_driver_open_kms+0xc6/0x210 [amdgpu]
[ 6.934638] drm_fbdev_client_hotplug+0x16c/0x220 [drm_kms_helper]
[ 6.934652] drm_fbdev_generic_setup+0xa9/0x180 [drm_kms_helper]
[ 6.934665] amdgpu_pci_probe+0x34e/0x360 [amdgpu]
[ 6.934933] local_pci_probe+0x41/0x80
[ 6.934936] pci_device_probe+0xbd/0x220
[ 6.934939] ? sysfs_do_create_link_sd+0x6e/0xe0
[ 6.934942] really_probe+0x1c2/0x390
[ 6.934946] __driver_probe_device+0xff/0x170
[ 6.934948] driver_probe_device+0x1f/0x90
[ 6.934951] __driver_attach+0xbe/0x1b0
[ 6.934954] ? __device_attach_driver+0xe0/0xe0
[ 6.934956] bus_for_each_dev+0x76/0xc0
[ 6.934958] bus_add_driver+0x160/0x210
[ 6.934961] driver_register+0x89/0xe0
[ 6.934964] ? 0xffffffffc105f000
[ 6.934966] do_one_initcall+0x44/0x200
[ 6.934969] ? do_init_module+0x22/0x1e0
[ 6.934972] ? kmem_cache_alloc_trace+0x14b/0x2c0
[ 6.934975] do_init_module+0x4a/0x1e0
[ 6.934978] __do_sys_init_module+0x138/0x1b0
[ 6.934983] do_syscall_64+0x3a/0x90
[ 6.934986] entry_SYSCALL_64_after_hwframe+0x63/0xcd
[ 6.934989] RIP: 0033:0x7f894278d32e
[ 6.934990] Code: 48 8b 0d 45 0b 0c 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 49 89 ca b8 af 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 12 0b 0c 00 f7 d8 64 89 01 48
[ 6.934992] RSP: 002b:00007ffedbc23b88 EFLAGS: 00000246 ORIG_RAX: 00000000000000af
[ 6.934995] RAX: ffffffffffffffda RBX: 000055a1a8ea5e30 RCX: 00007f894278d32e
[ 6.934996] RDX: 00007f89428e2a9d RSI: 000000000133c2e1 RDI: 00007f893fdb9010
[ 6.934997] RBP: 00007f893fdb9010 R08: 000055a1a8ecd000 R09: 000000000133c2f0
[ 6.934999] R10: 000000055a1a8ecd R11: 0000000000000246 R12: 00007f89428e2a9d
[ 6.935000] R13: 0000000000000001 R14: 000055a1a8ea5f20 R15: 000055a1a8ea5e30
[ 6.935003] </TASK>
[ 6.935003] ---[ end trace 0000000000000000 ]---
NOTE there is another issue in amd-staging-drm-next dmesg log
that was introduced after this commit and was NOT bisected here:
[ 2.685592] amdgpu: Unknown symbol ttm_bo_vm_dummy_page (err -2)
[ 2.685606] amdgpu: Unknown symbol drm_mode_is_420_also (err -2)
[ 2.685609] amdgpu: Unknown symbol drm_atomic_private_obj_init (err -2)
[ 2.685612] amdgpu: Unknown symbol drm_dp_mst_topology_mgr_set_mst (err -2)
[ 2.685617] amdgpu: Unknown symbol drm_dp_channel_eq_ok (err -2)
[ 2.685623] amdgpu: Unknown symbol drm_is_current_master (err -2)
[ 2.685639] amdgpu: Unknown symbol drm_modeset_lock_all_ctx (err -2)
...
Hardware description:
- Hardware name: Valve Jupiter/Jupiter, BIOS F7A0105 03/21/2022
- GPU: Advanced Micro Devices, Inc. [AMD/ATI] VanGogh [1002:163f]
- Type of Display Connection: DP
System information:
- Distro name and Version: SteamOS Holo
- Kernel version: 5.19.0-amd-staging-drm-next+
- Custom kernel: Kernel from amd-staging-drm-next
- AMD official driver version: DCN301
How to reproduce the issue:
Compile and install custom kernel from amd-staging-drm-next (agd5f/linux@924179fd) in a system with VanGogh hw.